--- a/MVCMovie/Web.config
+++ b/MVCMovie/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVCMovie-20150716111830.mdf;Initial Catalog=aspnet-MVCMovie-20150716111830;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MovieDBContext"  connectionString ="Data Source=(LocalDb)\v11.0;AttachDbFileName=|DataDirectory|
+         \Movies.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
