--- a/MVCMovie/MVCMovie.csproj
+++ b/MVCMovie/MVCMovie.csproj
@@ -157,12 +157,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Data\Controllers\HelloWorldController.cs" />
-    <Compile Include="App_Data\Controllers\MoviesController.cs" />
-    <Compile Include="App_Data\Controllers\Startup.Auth.cs" />
-    <Compile Include="App_Data\Controllers\AccountController.cs" />
-    <Compile Include="App_Data\Controllers\HomeController.cs" />
-    <Compile Include="App_Data\Controllers\ManageController.cs" />
+    <Compile Include="Controllers\HelloWorldController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\Startup.Auth.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -174,6 +174,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Movies.mdf" />
+    <Content Include="App_Data\Movies_log.ldf">
+      <DependentUpon>Movies.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
