--- a/MVCMovie/MVCMovie.csproj
+++ b/MVCMovie/MVCMovie.csproj
@@ -157,15 +157,16 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Data\Controllers\HelloWorldController.cs" />
-    <Compile Include="App_Data\Controllers\MoviesController.cs" />
-    <Compile Include="App_Data\Controllers\Startup.Auth.cs" />
-    <Compile Include="App_Data\Controllers\AccountController.cs" />
-    <Compile Include="App_Data\Controllers\HomeController.cs" />
-    <Compile Include="App_Data\Controllers\ManageController.cs" />
+    <Compile Include="Controllers\HelloWorldController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\Startup.Auth.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -242,7 +243,9 @@
       <DependentUpon>jquery.validate.min.js</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
